logs/bugs-everywhere.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bugs_everywhere-1.1.1.egg-info'...
Listing './lib/python3.5/site-packages/libbe'...
Compiling './lib/python3.5/site-packages/libbe/bug.py'...
***   File "./lib/python3.5/site-packages/libbe/bug.py", line 720
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/bugdir.py'...
***   File "./lib/python3.5/site-packages/libbe/bugdir.py", line 189
    except mapfile.InvalidMapfileContents, e:
                                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libbe/command'...
Compiling './lib/python3.5/site-packages/libbe/command/base.py'...
***   File "./lib/python3.5/site-packages/libbe/command/base.py", line 87
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/comment.py'...
***   File "./lib/python3.5/site-packages/libbe/command/comment.py", line 141
    except libbe.ui.util.editor.CantFindEditor, e:
                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/commit.py'...
***   File "./lib/python3.5/site-packages/libbe/command/commit.py", line 97
    except libbe.storage.EmptyCommit, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/diff.py'...
***   File "./lib/python3.5/site-packages/libbe/command/diff.py", line 92
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/html.py'...
***   File "./lib/python3.5/site-packages/libbe/command/html.py", line 258
    libbe.util.id.InvalidIDStructure), e:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/serve_commands.py'...
***   File "./lib/python3.5/site-packages/libbe/command/serve_commands.py", line 94
    except libbe.command.UnknownCommand, e:
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/serve_storage.py'...
***   File "./lib/python3.5/site-packages/libbe/command/serve_storage.py", line 204
    except libbe.storage.EmptyCommit, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/set.py'...
***   File "./lib/python3.5/site-packages/libbe/command/set.py", line 99
    print _value_string(bugdir, params['setting'])
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/severity.py'...
***   File "./lib/python3.5/site-packages/libbe/command/severity.py", line 77
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/show.py'...
***   File "./lib/python3.5/site-packages/libbe/command/show.py", line 197
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/status.py'...
***   File "./lib/python3.5/site-packages/libbe/command/status.py", line 78
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/tag.py'...
***   File "./lib/python3.5/site-packages/libbe/command/tag.py", line 139
    print "Tags for %s:" % bug.id.user()
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/command/util.py'...
***   File "./lib/python3.5/site-packages/libbe/command/util.py", line 99
    except libbe.util.id.InvalidIDStructure, e:
                                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/comment.py'...
***   File "./lib/python3.5/site-packages/libbe/comment.py", line 483
    raise ValueError, \
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/diff.py'...
***   File "./lib/python3.5/site-packages/libbe/diff.py", line 224
    raise KeyError, "%s doesn't match '%s'" % (names, self.name)
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libbe/storage'...
Compiling './lib/python3.5/site-packages/libbe/storage/http.py'...
***   File "./lib/python3.5/site-packages/libbe/storage/http.py", line 166
    except libbe.util.http.HTTPError, e:
                                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libbe/storage/util'...
Compiling './lib/python3.5/site-packages/libbe/storage/util/properties.py'...
***   File "./lib/python3.5/site-packages/libbe/storage/util/properties.py", line 475
    except ValueCheckError, e:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/storage/util/upgrade.py'...
***   File "./lib/python3.5/site-packages/libbe/storage/util/upgrade.py", line 421
    raise NotImplementedError, \
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libbe/storage/vcs'...
Compiling './lib/python3.5/site-packages/libbe/storage/vcs/arch.py'...
***   File "./lib/python3.5/site-packages/libbe/storage/vcs/arch.py", line 259
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/storage/vcs/base.py'...
***   File "./lib/python3.5/site-packages/libbe/storage/vcs/base.py", line 578
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/storage/vcs/bzr.py'...
***   File "./lib/python3.5/site-packages/libbe/storage/vcs/bzr.py", line 160
    except bzrlib.errors.BzrCommandError, e:
                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/storage/vcs/darcs.py'...
***   File "./lib/python3.5/site-packages/libbe/storage/vcs/darcs.py", line 107
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/storage/vcs/git.py'...
***   File "./lib/python3.5/site-packages/libbe/storage/vcs/git.py", line 35
    except ImportError, error:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libbe/ui'...
Compiling './lib/python3.5/site-packages/libbe/ui/command_line.py'...
***   File "./lib/python3.5/site-packages/libbe/ui/command_line.py", line 308
    except UnicodeDecodeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/libbe/ui/util'...
Listing './lib/python3.5/site-packages/libbe/util'...
Compiling './lib/python3.5/site-packages/libbe/util/http.py'...
***   File "./lib/python3.5/site-packages/libbe/util/http.py", line 107
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/util/id.py'...
***   File "./lib/python3.5/site-packages/libbe/util/id.py", line 106
    except OSError, e :
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/util/subproc.py'...
***   File "./lib/python3.5/site-packages/libbe/util/subproc.py", line 81
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/libbe/util/wsgi.py'...
***   File "./lib/python3.5/site-packages/libbe/util/wsgi.py", line 118
    raise ValueError, '{0}!=3 fields in "{1}"'.format(
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
